kubernetes/apps/gitops/argocd/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitops.homelab.internal
spec:
